# xivapy

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: client.md  model.md  query.md
src/xivapy/: __init__.py  client.py  exceptions.py  model.py  model.pyi  query.py  types.py  version.py
tests/: conftest.py  test_client.py  test_model.py  test_query.py
tests/fixtures/: api_responses.py
