[project]
name = "xivapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiostream>=0.7.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[project.scripts]
xivapy = "xivapy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.12.10",
]
